--- a/testselect.html
+++ b/testselect.html
@@ -254,12 +254,12 @@
                 this.dateSelect = dateSelect;
                 this.timeSelect = timeSelect;
                 this.dateIntervals = [];
-                this._fetchProducts();
+                this._fetchIntervals();
                 this._init();
                 this._render();
             }
 
-            _fetchProducts() {
+            _fetchIntervals() {
                 this.dateIntervals = deliveryTime;
             }
 
